# df_translation_stats

./: README.md  cache.json  config.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
df_translation_stats/: main.py  models.py  quickchart.py  settings.py  transifex.py
df_translation_stats/diagram/: __init__.py  diagram.py
df_translation_stats/quickchart/: __init__.py  models.py  quickchart.py
df_translation_stats/stats/: __init__.py  common.py  models.py  po_stats.py  transifex.py
df_translation_stats/transifex/: __init__.py  transifex.py
